src/core/cocor/Parser.cs
using System;
using System.Globalization;
using System.Text;
using System.Collections.Generic;
using csmic;



using System;

namespace csmic.Interpreter {



public class Parser {
	public const int _EOF = 0;
	public const int _identifier = 1;
	public const int _sign = 2;
	public const int _binary = 3;
	public const int _hex = 4;
	public const int _number = 5;
	public const int _string = 6;
	public const int _LPAREN = 7;
	public const int _RPAREN = 8;
	public const int _COMPARER = 9;
	public const int maxT = 22;

	const bool _T = true;
	const bool _x = false;
	const int minErrDist = 2;
	
	public Scanner scanner;
	public Errors  errors;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;

private FunctionValue functionValue = new FunctionValue();

public FunctionValue Result
{
    get { return this.functionValue; }
    set { this.functionValue = value; }
}

private InputInterpreter interpreter = null;

public InputInterpreter Interpreter
{
    get { return this.interpreter; }
    set { this.interpreter = value; }
}

bool IsFunctionCall()
{
    scanner.ResetPeek();
    Token next = scanner.Peek();
    if (next.kind == _LPAREN && la.kind == _identifier) return true;
    return false;
}

bool IsCompare()
{
    scanner.ResetPeek();
    Token next = scanner.Peek();
    if (next.kind == _COMPARER) return true;
    return false;
}

bool IsAssignment()
{
    scanner.ResetPeek();
    Token next = scanner.Peek();
    if (next.val == "::" || next.val == ":=" || next.val == "->") return true;
    return false;
}

bool IsArrayCall()
{
    scanner.ResetPeek();
    Token next = scanner.Peek();
    if (next.val == "[") return true;
    return false;
}

/*
 * Character sets and tokens
 */



	public Parser(Scanner scanner) {
		this.scanner = scanner;
		errors = new Errors();
	}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (string msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	bool StartOf (int s) {
		return set[s, la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}


	bool WeakSeparator(int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) {Get(); return true;}
		else if (StartOf(repFol)) {return false;}
		else {
			SynErr(n);
			while (!(set[syFol, kind] || set[repFol, kind] || set[0, kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	
	void INTERPRETER() {
		FunctionValue fv = new FunctionValue();
		bool success = true;
		decimal r = 0;
		if (this.interpreter == null) { return; }
		
		if (IsCompare()) {
			Comparison(out success);
			this.functionValue = (success == true) ? FunctionValue.TRUE : FunctionValue.FALSE;
			this.interpreter.ProduceOutput(this.functionValue);
			
		} else if (IsAssignment()) {
			Assignment(out r);
			this.functionValue = new FunctionValue(ValueType.Numeric, r);
			this.interpreter.ProduceOutput(this.functionValue);
			
		} else if (StartOf(1)) {
			Expression(out r);
			this.functionValue = new FunctionValue(ValueType.Numeric, r);
			this.interpreter.ProduceOutput(this.functionValue);
			
		} else SynErr(23);
	}

	void Comparison(out bool result) {
		decimal firstValue = 0; decimal secondValue = 0; string compareType = string.Empty; result = false; 
		Expression(out firstValue);
		Expect(9);
		compareType = t.val; 
		Expression(out secondValue);
		switch(compareType)
		{
		   case "==": result = (firstValue == secondValue); break;
		   case ">":  result = (firstValue >  secondValue); break;
		   case "<":  result = (firstValue <  secondValue); break;
		   case ">=": result = (firstValue >= secondValue); break;
		   case "<=": result = (firstValue <= secondValue); break;
		   default: result = false; break;
		}
		
	}

	void Assignment(out decimal r) {
		string identifier = string.Empty; string expression = string.Empty; decimal[] d = new decimal[0]; r = 0; 
		Expect(1);
		identifier = t.val; 
		if (la.kind == 19) {
			Get();
			Expression(out r);
			this.interpreter.AssignNumeric(identifier, r); 
		} else if (la.kind == 20) {
			Get();
			AnyExpression(out expression);
			this.interpreter.AssignExpression(identifier, expression); r = 0; 
		} else if (la.kind == 21) {
			Get();
			ArrayL(out d);
			this.interpreter.AssignNumericArray(identifier, d); r = 0; 
		} else SynErr(24);
	}

	void Expression(out decimal r) {
		decimal r1 = 0; r = 0; 
		Term(out r);
		while (la.kind == 10 || la.kind == 11) {
			if (la.kind == 10) {
				Get();
				Term(out r1);
				r += r1; 
			} else {
				Get();
				Term(out r1);
				r -= r1; 
			}
		}
	}

	void Term(out decimal r) {
		decimal r1 = 0; r = 0; 
		Factor(out r);
		while (la.kind == 12 || la.kind == 13 || la.kind == 14) {
			if (la.kind == 12) {
				Get();
				Factor(out r1);
				r *= r1; 
			} else if (la.kind == 13) {
				Get();
				Factor(out r1);
				r /= r1; 
			} else {
				Get();
				Term(out r1);
				r %= r1; 
			}
		}
	}

	void Factor(out decimal r) {
		decimal r1 = 0; 
		Value(out r);
		while (la.kind == 15) {
			Get();
			Expression(out r1);
			r = Convert.ToDecimal(Math.Pow(Convert.ToDouble(r), Convert.ToDouble(r1))); 
		}
	}

	void Value(out decimal r) {
		r = 0; decimal r1 = 0; int signum = 1;
		FunctionValue fvr = new FunctionValue();
		string ident = string.Empty;
		
		if (la.kind == 10 || la.kind == 11) {
			if (la.kind == 10) {
				Get();
			} else {
				Get();
				signum = -1; 
			}
		}
		if (IsFunctionCall()) {
			Function(out fvr);
			if (fvr.Type == ValueType.Numeric && fvr.Value != null)
			{
			   try { r = signum * Convert.ToDecimal(fvr.Value); }
			   catch { SemErr("function returned non-numeric"); r = 0; }
			}
			else
			{
			   SemErr("function returned a string; number required");
			   r = 0;
			}
			
		} else if (IsArrayCall()) {
			ArrayCall(out r);
			r = signum * r; 
		} else if (la.kind == 1) {
			Get();
			ident = t.val;
			decimal temp = 0;
			string expr = string.Empty;
			bool ok = false;
			// Prefer numeric binding
			try
			{
			   // runtime method expected
			   ok = this.interpreter.TryGetNumeric(ident, out temp);
			}
			catch { ok = false; }
			if (ok)
			{
			   r = signum * temp;
			}
			else
			{
			   // Check expression binding
			   try
			   {
			       if (this.interpreter.TryGetExpression(ident, out expr))
			       {
			           FunctionValue eval = this.interpreter.EvaluateExpression(expr);
			           if (eval.Type == ValueType.Numeric && eval.Value != null)
			           {
			               r = signum * Convert.ToDecimal(eval.Value);
			           }
			           else
			           {
			               SemErr("expression variable did not evaluate to a number");
			               r = 0;
			           }
			       }
			       else
			       {
			           SemErr("variable '" + ident + "' is not numeric");
			           r = 0;
			       }
			   }
			   catch { SemErr("error evaluating expression variable"); r = 0; }
			}
			
		} else if (la.kind == 5) {
			Get();
			r = signum * decimal.Parse(t.val, NumberStyles.Float); 
		} else if (la.kind == 4) {
			Get();
			string hx = t.val.Remove(0,2);
			try { r = signum * Convert.ToDecimal(Convert.ToInt64(hx, 16)); }
			catch { r = 0; }
			
		} else if (la.kind == 3) {
			Get();
			string bx = t.val.Remove(t.val.Length - 1);
			try { r = signum * Convert.ToDecimal(Convert.ToInt64(bx, 2)); }
			catch { r = 0; }
			
		} else if (la.kind == 7) {
			Get();
			Expression(out r);
			Expect(8);
			r = signum * r; 
		} else SynErr(25);
	}

	void Function(out FunctionValue r) {
		string functionName = string.Empty; FunctionArgument[] args = new FunctionArgument[0]; r = new FunctionValue(); 
		Expect(1);
		functionName = t.val; 
		Expect(7);
		ArgList(out args);
		Expect(8);
		r = this.interpreter.ExecuteFunction(functionName, args); 
	}

	void ArrayCall(out decimal r) {
		string ident = string.Empty; r = 0; decimal pos = 0; 
		Expect(1);
		ident = t.val; 
		Expect(16);
		Expression(out pos);
		try
		{
		   int i = Convert.ToInt32(pos);
		   decimal[] values;
		   if (this.interpreter.TryGetNumericArray(ident, out values))
		   {
		       if (i >= 0 && i < values.Length) { r = values[i]; }
		       else { SemErr("array index out of range"); r = 0; }
		   }
		   else
		   {
		       SemErr("variable '" + ident + "' is not a numeric array");
		       r = 0;
		   }
		}
		catch { SemErr("invalid array index"); r = 0; }
		
		Expect(18);
	}

	void ArrayL(out decimal[] d) {
		List<decimal> list = new List<decimal>(); decimal r = 0; d = new decimal[0]; 
		Expect(16);
		Expression(out r);
		list.Add(r); d = list.ToArray(); 
		while (la.kind == 17) {
			Get();
			Expression(out r);
			list.Add(r); d = list.ToArray(); 
		}
		Expect(18);
	}

	void AnyExpression(out string value) {
		value = string.Empty; StringBuilder builder = new StringBuilder(); 
		Get();
		builder.Append(t.val); 
		while (StartOf(2)) {
			Get();
			builder.Append(t.val); 
		}
		value = builder.ToString(); 
	}

	void ArgList(out FunctionArgument[] args) {
		List<FunctionArgument> list = new List<FunctionArgument>(); FunctionArgument a = new FunctionArgument { Name = string.Empty, Value = new FunctionValue() }; args = new FunctionArgument[0]; 
		if (StartOf(3)) {
			Arg(out a);
			list.Add(a); args = list.ToArray(); 
			while (la.kind == 17) {
				Get();
				Arg(out a);
				list.Add(a); args = list.ToArray(); 
			}
		}
	}

	void Arg(out FunctionArgument arg) {
		arg = new FunctionArgument { Name = string.Empty, Value = new FunctionValue() }; decimal r = 0; string s = string.Empty; 
		if (la.kind == 6) {
			Get();
			s = t.val.Substring(1, t.val.Length - 2); arg = new FunctionArgument { Name = string.Empty, Value = new FunctionValue(ValueType.String, s) }; 
		} else if (StartOf(1)) {
			Expression(out r);
			arg = new FunctionArgument { Name = string.Empty, Value = new FunctionValue(ValueType.Numeric, r) }; 
		} else SynErr(26);
	}



	public void Parse() {
		la = new Token();
		la.val = "";		
		Get();
		INTERPRETER();
		Expect(0);

	}
	
	static readonly bool[,] set = {
		{_T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x},
		{_x,_T,_x,_T, _T,_T,_x,_T, _x,_x,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x},
		{_x,_T,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _T,_T,_T,_T, _T,_T,_T,_x},
		{_x,_T,_x,_T, _T,_T,_T,_T, _x,_x,_T,_T, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x}

	};
} // end Parser


public class Errors {
	public int count = 0;                                    // number of errors detected
	public System.IO.TextWriter errorStream = Console.Out;   // error messages go to this stream
	public string errMsgFormat = "-- line {0} col {1}: {2}"; // 0=line, 1=column, 2=text

	public virtual void SynErr (int line, int col, int n) {
		string s;
		switch (n) {
			case 0: s = "EOF expected"; break;
			case 1: s = "identifier expected"; break;
			case 2: s = "sign expected"; break;
			case 3: s = "binary expected"; break;
			case 4: s = "hex expected"; break;
			case 5: s = "number expected"; break;
			case 6: s = "string expected"; break;
			case 7: s = "LPAREN expected"; break;
			case 8: s = "RPAREN expected"; break;
			case 9: s = "COMPARER expected"; break;
			case 10: s = "\"+\" expected"; break;
			case 11: s = "\"-\" expected"; break;
			case 12: s = "\"*\" expected"; break;
			case 13: s = "\"/\" expected"; break;
			case 14: s = "\"%\" expected"; break;
			case 15: s = "\"^\" expected"; break;
			case 16: s = "\"[\" expected"; break;
			case 17: s = "\",\" expected"; break;
			case 18: s = "\"]\" expected"; break;
			case 19: s = "\"::\" expected"; break;
			case 20: s = "\":=\" expected"; break;
			case 21: s = "\"->\" expected"; break;
			case 22: s = "??? expected"; break;
			case 23: s = "invalid INTERPRETER"; break;
			case 24: s = "invalid Assignment"; break;
			case 25: s = "invalid Value"; break;
			case 26: s = "invalid Arg"; break;

			default: s = "error " + n; break;
		}
		errorStream.WriteLine(errMsgFormat, line, col, s);
		count++;
	}

	public virtual void SemErr (int line, int col, string s) {
		errorStream.WriteLine(errMsgFormat, line, col, s);
		count++;
	}
	
	public virtual void SemErr (string s) {
		errorStream.WriteLine(s);
		count++;
	}
	
	public virtual void Warning (int line, int col, string s) {
		errorStream.WriteLine(errMsgFormat, line, col, s);
	}
	
	public virtual void Warning(string s) {
		errorStream.WriteLine(s);
	}
} // Errors


public class FatalError: Exception {
	public FatalError(string m): base(m) {}
}
}